--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "antd-mobile": "^2.1.3",
+    "babel-plugin-import": "^1.6.3",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-persist": "^4.9.1",
+    "redux-thunk": "^2.2.0",
+    "teaset": "^0.5.3"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
