--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "antd-mobile": "^2.1.3",
+    "babel-plugin-import": "^1.6.3",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-navigation": "^1.0.0-beta.22",
