--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-import": "^1.6.3",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-accordion": "^1.0.1",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
