--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-accordion": "^1.0.1",
+    "react-native-animatable": "^1.2.4",
     "react-native-collapsible": "^0.10.0",
     "react-native-pull": "^2.0.2",
     "react-navigation": "^1.0.0-beta.22",
