--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-animatable": "^1.2.4",
     "react-native-collapsible": "^0.10.0",
     "react-native-pull": "^2.0.2",
+    "react-native-scrollable-tab-view": "^0.8.0",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
