--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-accordion": "^1.0.1",
     "react-native-animatable": "^1.2.4",
     "react-native-collapsible": "^0.10.0",
+    "react-native-parallax-scroll-view": "^0.20.1",
     "react-native-pull": "^2.0.2",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-navigation": "^1.0.0-beta.22",
