--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react-native-accordion": "^1.0.1",
     "react-native-animatable": "^1.2.4",
     "react-native-collapsible": "^0.10.0",
+    "react-native-device-info": "^0.13.0",
     "react-native-pull": "^2.0.2",
     "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-textinput-effects": "^0.4.2",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
