--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
   "dependencies": {
     "antd-mobile": "^2.1.3",
     "babel-plugin-import": "^1.6.3",
+    "rc-form": "^2.1.7",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-accordion": "^1.0.1",
     "react-native-animatable": "^1.2.4",
     "react-native-collapsible": "^0.10.0",
-<<<<<<< HEAD
     "react-native-device-info": "^0.13.0",
-=======
     "react-native-parallax-scroll-view": "^0.20.1",
->>>>>>> 34c4c1d17802999f3c3be25b04d3b68435b162dd
     "react-native-pull": "^2.0.2",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-textinput-effects": "^0.4.2",
