--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-device-info')
+    compile project(':react-native-image-picker')
+    compile project(':react-native-image-crop-picker')
 }
 
 // Run this once to be able to run the application with BUCK
