--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "dependencies": {
     "antd-mobile": "^2.1.3",
     "babel-plugin-import": "^1.6.3",
+    "moment": "^2.20.1",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-accordion": "^1.0.1",
     "react-native-animatable": "^1.2.4",
     "react-native-collapsible": "^0.10.0",
     "react-native-device-info": "^0.13.0",
+    "react-native-gifted-form": "^0.1.1",
+    "react-native-image-crop-picker": "^0.19.1",
+    "react-native-image-picker": "^0.26.7",
     "react-native-parallax-scroll-view": "^0.20.1",
     "react-native-pull": "^2.0.2",
     "react-native-scrollable-tab-view": "^0.8.0",
