--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-native-collapsible": "^0.10.0",
     "react-native-device-info": "^0.13.0",
     "react-native-gifted-form": "^0.1.1",
+    "react-native-http-cache": "^0.2.0",
     "react-native-image-crop-picker": "^0.19.1",
     "react-native-image-picker": "^0.26.7",
+    "react-native-modalbox": "^1.4.2",
     "react-native-parallax-scroll-view": "^0.20.1",
     "react-native-pull": "^2.0.2",
     "react-native-scrollable-tab-view": "^0.8.0",
@@ -30,7 +32,8 @@
     "redux": "^3.7.2",
     "redux-persist": "^4.9.1",
     "redux-thunk": "^2.2.0",
-    "teaset": "^0.5.3"
+    "teaset": "^0.5.3",
+    "toggle-switch-react-native": "^0.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
