--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,6 +144,7 @@ dependencies {
     compile project(':react-native-image-picker')
     compile project(':react-native-image-crop-picker')
     compile project(':RCTHttpCache')
+    compile project(':RCTWeChat')
 }
 
 // Run this once to be able to run the application with BUCK
