--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react-native-http-cache": "^0.2.0",
     "react-native-image-crop-picker": "^0.19.1",
     "react-native-image-picker": "^0.26.7",
+    "react-native-material-textfield": "^0.12.0",
     "react-native-modalbox": "^1.4.2",
     "react-native-parallax-scroll-view": "^0.20.1",
     "react-native-pull": "^2.0.2",
     "react-native-scrollable-tab-view": "^0.8.0",
-    "react-native-textinput-effects": "^0.4.2",
     "react-native-vector-icons": "^4.5.0",
+    "react-native-wechat": "^1.9.9",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
