--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,6 +106,10 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        manifestPlaceholders = [
+                JPUSH_APPKEY: "b385be0bcd6844cf1cf95843", //在此替换你的APPKey
+                APP_CHANNEL: "developer-default"    //应用渠道号
+        ]
     }
     splits {
         abi {
@@ -145,6 +149,9 @@ dependencies {
     compile project(':react-native-image-crop-picker')
     compile project(':RCTHttpCache')
     compile project(':RCTWeChat')
+    compile project(':jpush-react-native')  // 添加 jpush 依赖
+    compile project(':jcore-react-native')  // 添加 jcore 依赖
+    compile project(':react-native-spinkit')
 }
 
 // Run this once to be able to run the application with BUCK
