--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,8 +94,8 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.kehu"
@@ -110,6 +110,7 @@ android {
                 JPUSH_APPKEY: "b385be0bcd6844cf1cf95843", //在此替换你的APPKey
                 APP_CHANNEL: "developer-default"    //应用渠道号
         ]
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -145,13 +146,14 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-device-info')
-    compile project(':react-native-image-picker')
     compile project(':react-native-image-crop-picker')
     compile project(':RCTHttpCache')
     compile project(':RCTWeChat')
     compile project(':jpush-react-native')  // 添加 jpush 依赖
     compile project(':jcore-react-native')  // 添加 jcore 依赖
     compile project(':react-native-spinkit')
+    compile project(':aurora-imui-react-native')
+    compile project(':react-native-fs')
 }
 
 // Run this once to be able to run the application with BUCK
