--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "antd-mobile": "^2.1.3",
+    "aurora-imui-react-native": "^0.7.1",
     "babel-plugin-import": "^1.6.3",
     "jcore-react-native": "^1.2.4",
     "jpush-react-native": "^2.1.8",
@@ -21,10 +22,10 @@
     "react-native-app-intro-slider": "^0.2.2",
     "react-native-collapsible": "^0.10.0",
     "react-native-device-info": "^0.13.0",
+    "react-native-fs": "^2.9.7",
     "react-native-gifted-form": "^0.1.1",
     "react-native-http-cache": "^0.2.0",
     "react-native-image-crop-picker": "^0.19.1",
-    "react-native-image-picker": "^0.26.7",
     "react-native-material-textfield": "^0.12.0",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-modalbox": "^1.4.2",
