--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,6 +154,7 @@ dependencies {
     compile project(':react-native-spinkit')
     compile project(':aurora-imui-react-native')
     compile project(':react-native-fs')
+    compile project(':react-native-vector-icons')
 }
 
 // Run this once to be able to run the application with BUCK
