--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-accordion": "^1.0.1",
+    "react-native-action-button": "^2.8.4",
     "react-native-animatable": "^1.2.4",
     "react-native-app-intro-slider": "^0.2.2",
     "react-native-collapsible": "^0.10.0",
