--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-app-intro-slider": "^0.2.2",
     "react-native-collapsible": "^0.10.0",
     "react-native-device-info": "^0.13.0",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.9.7",
     "react-native-gifted-form": "^0.1.1",
     "react-native-http-cache": "^0.2.0",
