--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-gifted-form": "^0.1.1",
     "react-native-http-cache": "^0.2.0",
     "react-native-image-crop-picker": "^0.19.1",
+    "react-native-image-zoom-viewer": "^2.0.19",
     "react-native-material-textfield": "^0.12.0",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-modalbox": "^1.4.2",
