--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -155,6 +155,8 @@ dependencies {
     compile project(':aurora-imui-react-native')
     compile project(':react-native-fs')
     compile project(':react-native-vector-icons')
+    compile project(':react-native-picker')
+    compile project(':react-native-contacts-wrapper')
 }
 
 // Run this once to be able to run the application with BUCK
