--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jcore-react-native": "^1.2.4",
     "jpush-react-native": "^2.1.8",
     "moment": "^2.20.1",
+    "native-echarts": "^0.4.0",
     "rc-form": "^2.1.7",
     "react": "16.0.0",
     "react-native": "0.51.0",
@@ -22,8 +23,8 @@
     "react-native-animatable": "^1.2.4",
     "react-native-app-intro-slider": "^0.2.2",
     "react-native-collapsible": "^0.10.0",
+    "react-native-contacts-wrapper": "^0.2.4",
     "react-native-device-info": "^0.13.0",
-    "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.9.7",
     "react-native-gifted-form": "^0.1.1",
     "react-native-http-cache": "^0.2.0",
@@ -33,7 +34,9 @@
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-modalbox": "^1.4.2",
     "react-native-parallax-scroll-view": "^0.20.1",
+    "react-native-picker": "^4.3.5",
     "react-native-pull": "^2.0.2",
+    "react-native-roll-picker": "^1.0.6",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-spinkit": "^1.1.1",
     "react-native-vector-icons": "^4.5.0",
